--- a/chat_application/css/style.css
+++ b/chat_application/css/style.css
@@ -1,3 +1,9 @@
+/**********VICAVELLY® STUDIO INC*********/
+/*
+created by   vitus&Co-GroupMembers©   @   VICAVELLY and Group® Studio 
+Time started : 4:05am;
+Date         : 25th November, 2016;
+*/
 body
 {
 	background:#16a085;
@@ -12,18 +18,113 @@ body
 	
 }
 
+
+.detail_contact
+{
+    
+    height: 700px;
+    background: white;
+	width:400px;
+	position:fixed;
+	bottom:0px;
+	right:20px;
+	border-radius: 5px 5px 0px 0px; 
+    box-shadow: 0 0 24px rgba(8, 25, 17, 22.2);
+}
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 10px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin-top: 210px;
+  margin-left: 90px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '>>';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.name_0f_contact
+{
+    cursor: pointer;
+    padding:30px;
+	background: red;
+	color:white;
+    font-size: 20px;
+	border-radius: 5px 5px 0px 0px;
+    box-shadow: 0 0 24px rgba(8, 25, 17, 22.2);
+}
+
+.img
+{
+	margin-left: 150px;
+    margin-top: 90px;   
+}
+
+.empty
+{
+    padding-top: 50px;
+}
+
+.circle_0f
+{
+    position: relative;
+    width: 50%;
+    height: auto;
+    padding-top: 50%;
+    background: #ef8913;    
+    border-radius: 100px;
+}
+
+.circle_0f:hover
+{
+    opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */ 
+}
+
 .msg_box
 {
     width:250px;
     box-shadow: 0 0 24px rgba(8, 25, 17, 22.2);
     
 }
-
-
+    
+    
 .msg_body
 {
-    height: 250px;
+    height: 200px;
     font-size: 12px;
+    overflow: auto;
+    overflow-x: hidden;
 }
 
 .chat_box,.msg_box
@@ -39,7 +140,8 @@ body
 
 .chat_head,.msg_head
 {
-	padding:15px;
+	cursor: pointer;
+    padding:15px;
 	background:#d35400;
 	color:white;
 	border-radius: 5px 5px 0px 0px;
@@ -56,6 +158,7 @@ body
 {
 	padding:20px 25px;
 	position:Relative;
+    cursor: pointer;
 }
 
 .user:hover
@@ -80,12 +183,21 @@ body
     background: #3498db;
 }
 
+.msg_head:hover
+{
+    color: #66FF66;
+}
+
 .close
 {
     font-family: roboto;
     float: right;
     color: wheat;
     padding-top: -8 0px;
+}
+.close:hover
+{
+    color: #FF0000;
 }
 
 .msg_input
@@ -102,7 +214,7 @@ body
 .msg_a 
 {
     padding: 15px;
-    background: #bdc3c7;
+    background: #99ffcc;
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 10px;
@@ -115,7 +227,7 @@ body
     width: 0px;
     height: 0px;
     border: 15px solid;
-    border-color:  transparent #bdc3c7 transparent transparent;
+    border-color:  transparent #99ffcc transparent transparent;
     position: absolute;
     top: 7px;
     left: -29px;
@@ -125,7 +237,7 @@ body
 .msg_b 
 {
     padding: 15px;
-    background: #bdc3c7;
+    background: #ffff99;
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 10px;
@@ -138,9 +250,26 @@ body
     width: 0px;
     height: 0px;
     border: 15px solid;
-    border-color:  transparent  transparent transparent #bdc3c7;
+    border-color:  transparent  transparent transparent #ffff99;
     position: absolute;
     top: 7px;
     right: -29px;
     
+}
+
+.time_stamp
+{
+    
+    font-style: italic;
+    float: right;
+    position: relative;
+    margin-top: 10px;
+    font-family:sans-serif;
+}
+
+.visible,.msg_body 
+{
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 2s linear;
 }
